syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.arrogantprogrammer.proto";
option java_outer_classname = "gRPCServiceProto";

package grpcserviceproto;

service GRPCFilmService {
  rpc AllFilms (Empty) returns (AllFilmsProtos){}
  rpc AllHeroes (Empty) returns (AllHeroProtos){}
}

message Empty {}

message FilmProto {
  string title = 1;
  int32 episode_id = 2;
  string director = 3;
  string release_date = 4;
}

message AllFilmsProtos {
  repeated FilmProto films = 1;
}

message HeroProto{
  string name = 1;
  string surname = 2;
  int32  height = 3;
  int32 mass = 4;
  bool darkSide = 5;
  LightSaberProto lightSaberProto = 6;
  repeated int32 episodeIds = 7;
}

enum LightSaberProto{
    RED = 0;
    BLUE = 1;
    GREEN = 2;
    PURPLE = 3;
}

message AllHeroProtos {
  repeated HeroProto heroes = 1;
}


